--- a/style.css
+++ b/style.css
@@ -218,3 +218,24 @@ a:visited {
 .cycling-popup .leaflet-popup-content-wrapper {
   border-left: 5px solid var(--color-brand--1);
 }
+
+@media (max-width: 500px) {
+  html {
+    font-size: 48%;
+  }
+
+  body {
+    flex-direction: column;
+    flex-direction: column-reverse;
+  }
+
+  .logo {
+    margin-bottom: 1rem;
+  }
+
+  .sidebar {
+    height: 55%;
+    flex-basis: auto;
+    padding: 1rem;
+  }
+}
